<resources>
    <string name="app_name"> FishFinder </string>
    <string name="hint_nickname"> 닉네임을 입력하세요 </string>
    <string name="hint_id"> ID를 입력하세요 </string>
    <string name="hint_password"> 패스워드를 입력하세요 </string>
    <string name="hint_chk_password"> 패스워드를 다시 입력하세요 </string>
    <string name="hint_content"> 글 내용을 입력하세요 </string>
    <string name="hint_title"> 제목을 입력하세요 </string>
    <string name="hint_writer"> 작성자 </string>
    <string name="btn_join"> 회원가입 </string>
    <string name="img_btn_logout"> 로그아웃 </string>
    <string name="view_camera"> 어종 인식 </string>
    <string name="view_board"> 게시판 </string>
    <string name="chk_loginstate"> 자동 로그인 </string>
    <string name="prefLoginstate"> loginstate </string>
    <string name="content_register"> 등록 </string>

</resources>