<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/main_color"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Fish Finder"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/toolbar"
        app:layout_constraintEnd_toEndOf="@+id/toolbar"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <EditText
        android:id="@+id/edit_nickname"
        android:layout_width="242dp"
        android:layout_height="41dp"
        android:layout_marginTop="132dp"
        android:ems="10"
        android:hint="@string/hint_nickname"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="84dp" />

    <EditText
        android:id="@+id/edit_id"
        android:layout_width="242dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/hint_id"
        app:layout_constraintBottom_toTopOf="@+id/edit_pw"
        app:layout_constraintEnd_toEndOf="@+id/edit_nickname"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_nickname"
        app:layout_constraintTop_toBottomOf="@+id/edit_nickname"
        app:layout_constraintVertical_bias="0.506" />

    <TextView
        android:id="@+id/textView_main_result"
        android:layout_width="183dp"
        android:layout_height="51dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="589dp" />

    <EditText
        android:id="@+id/edit_pw"
        android:layout_width="242dp"
        android:layout_height="41dp"
        android:ems="10"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_id"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_id"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="349dp" />



    <EditText
        android:id="@+id/chk_pw"
        android:layout_width="242dp"
        android:layout_height="41dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:hint="@string/hint_chk_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="@+id/edit_pw"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_pw"
        app:layout_constraintTop_toBottomOf="@+id/edit_pw" />



    <Button
        android:id="@+id/btn_register"
        android:layout_width="242dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:backgroundTint="@color/main_color"
        android:text="확인"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/chk_pw"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/chk_pw"
        app:layout_constraintTop_toBottomOf="@+id/chk_pw"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>